# ASAP

./: .appveyor.yaml  .gitignore  .travis.yml  ASAPConfig.cmake.in  ASAPConfigVersion.cmake.in  CMakeLists.txt  Copyright.txt  License.txt  Manual.docx  Readme.md  index.html
ASAP/: ASAP.cpp  ASAP.h  ASAP.ui  ASAP_Window.cpp  ASAP_Window.h  ASAP_export.h  CMakeLists.txt  FilterThread.cpp  IOThread.cpp  IOThread.h  IOWorker.cpp  IOWorker.h  Info.plist  MiniMap.cpp  PathologyViewController.cpp  PathologyViewController.h  PathologyViewState.h  PathologyViewer.cpp  PathologyViewer.h  PathologyWorkstation.aps  PathologyWorkstation.pro  PluginState.cpp  PluginState.h  PrefetchThread.cpp  QtProgressMonitor.cpp  QtProgressMonitor.h  RenderThread.cpp  RenderThread.h  RenderWorker.cpp  RenderWorker.h  ScaleBar.cpp  ScaleBar.h  TileManager.cpp  TileManager.h  UtilityFunctions.h  WSITileGraphicsItem.cpp  WSITileGraphicsItem.h  WSITileGraphicsItemCache.cpp  WSITileGraphicsItemCache.h  WorkstationToolBarFactory.cpp  (+6 more)
ASAP/annotation/: AnnotationTool.cpp  AnnotationTool.h  AnnotationWorkstationExtensionPlugin.cpp  AnnotationWorkstationExtensionPlugin.h  CMakeLists.txt  DotAnnotationTool.cpp  DotAnnotationTool.h  DotQtAnnotation.cpp  DotQtAnnotation.h  MeasurementAnnotationTool.cpp  MeasurementAnnotationTool.h  MeasurementQtAnnotation.cpp  MeasurementQtAnnotation.h  PointSetAnnotationTool.cpp  PointSetAnnotationTool.h  PointSetQtAnnotation.cpp  PointSetQtAnnotation.h  PolyAnnotationTool.cpp  PolyAnnotationTool.h  PolyQtAnnotation.cpp  PolyQtAnnotation.h  QtAnnotation.cpp  QtAnnotation.h  QtAnnotationGroup.cpp  QtAnnotationGroup.h  RectangleAnnotationTool.cpp  RectangleAnnotationTool.h  SplineAnnotationTool.cpp  SplineAnnotationTool.h
ASAP/basictools/: CMakeLists.txt  PanTool.cpp  PanTool.h  ZoomTool.cpp  ZoomTool.h
ASAP/documents/: Document.cpp  Document.h  DocumentCache.cpp  DocumentCache.h  DocumentInstance.cpp  DocumentInstance.h  DocumentRetainer.cpp  DocumentRetainer.h  DocumentWindow.cpp  DocumentWindow.h  DocumentWindowController.cpp  DocumentWindowController.h
ASAP/filters/: CMakeLists.txt  ColorDeconvolutionFilterPlugin.cpp  ColorDeconvolutionFilterPlugin.h  FilterDockWidget.cpp  FilterDockWidget.h  FilterThread.cpp  FilterThread.h  FilterWorkstationExtensionPlugin.cpp  FilterWorkstationExtensionPlugin.h  NucleiDetectionFilterPlugin.cpp  NucleiDetectionFilterPlugin.h
ASAP/interfaces/: interfaces.cpp  interfaces.h
ASAP/resources/: ASAP_resources.qrc  aboutdialog.ui
ASAP/visualization/: CMakeLists.txt  VisualizationWorkstationExtensionPlugin.cpp  VisualizationWorkstationExtensionPlugin.h
ASAP/worklist_interface/: ASAP_browser.aps  ASAP_browser.cpp  CMakeLists.txt  CompositeWindowLayout.ui  WorklistWindowLayout.ui  main.cpp
WorklistInterface/: CMakeLists.txt  Worklist Interface.sln
WorklistInterface/Worklist Interface/: ASAP_Composite_Window_Layout.ui  ASAP_GUI_Layout.ui  ASAP_GUI_Window.cpp  ASAP_GUI_Window.h  CompositeChild.h  CompositeWindow.cpp  CompositeWindow.h  CompositeWindowLayout.ui  DataTable.cpp  DjangoDataAcquisition.h  INI_Parsing.cpp  INI_Parsing.h  IconCreation.cpp  IconCreation.h  JSON_Parsing.cpp  JSON_Parsing.h  REST_Data_Acquisition.cpp  REST_Data_Acquisition.h  Worklist Interface.vcxproj  Worklist Interface.vcxproj.filters  WorklistInterface.qrc  WorklistWindow.cpp  WorklistWindow.h  WorklistWindowLayout.ui  Worklist_CSV_Example.cpp  Worklist_CSV_Example.h  main.cpp
annotation/: Annotation.cpp  Annotation.h  AnnotationBase.cpp  AnnotationBase.h  AnnotationGroup.cpp  AnnotationGroup.h  AnnotationList.cpp  AnnotationList.h  AnnotationService.cpp  AnnotationService.h  AnnotationToMask.cpp  AnnotationToMask.h  CMakeLists.txt  ImageScopeRepository.cpp  ImageScopeRepository.h  NDPARepository.cpp  NDPARepository.h  Repository.cpp  Repository.h  XmlRepository.cpp  XmlRepository.h  psimpl.h
buildtools/: CMakeLists.txt  Dockerfile  Dockerfile.openslide-winbuild  build_ASAP.sh
core/: Box.cpp  Box.h  CMakeLists.txt  CmdLineProgressMonitor.cpp  CmdLineProgressMonitor.h  ImageSource.cpp  ImageSource.h  Patch.h  Patch.hpp  PathologyEnums.cpp  PathologyEnums.h  Point.cpp  Point.h  ProgressDisplay.hpp  ProgressMonitor.cpp  ProgressMonitor.h  argparse.hpp  filetools.cpp  filetools.h  stringconversion.cpp  stringconversion.h
css/: pluton.css  (+5 more)
executables/: CMakeLists.txt
executables/MultiResImageConverter/: CMakeLists.txt  MultiResImageConverter.cpp
executables/TestRunner/: CMakeLists.txt  TestData.cpp  TestData.h  TestRunner.cpp
executables/WSIArithmetic/: CMakeLists.txt  WSIArithmetic.cpp
executables/WSIConnectedComponents/: CMakeLists.txt  (+1 more)
multiresolutionimageinterface/: AperioSVSWriter.cpp  AperioSVSWriter.h  CMakeLists.txt  DICOMImage.cpp  DICOMImage.h  DICOMImageFactory.cpp  DICOMImageFactory.h  JPEG2000Codec.cpp  JPEG2000Codec.h  LIFImage.cpp  LIFImage.h  LIFImageFactory.cpp  LIFImageFactory.h  MultiResolutionImage.cpp  MultiResolutionImage.h  MultiResolutionImageFactory.cpp  MultiResolutionImageFactory.h  MultiResolutionImageReader.cpp  MultiResolutionImageWriter.cpp  MultiResolutionImageWriter.h  OpenJP2Image.cpp  OpenJP2Image.h  OpenJP2ImageFactory.cpp  OpenJP2ImageFactory.h  OpenSlideImage.cpp  OpenSlideImage.h  OpenSlideImageFactory.cpp  OpenSlideImageFactory.h  TIFFImage.cpp  TIFFImageFactory.cpp  TIFFImageFactory.h  TileCache.cpp  TileCache.h  TileCache.hpp  VSIImage.cpp  VSIImageFactory.cpp  VSIImageFactory.h  VSIImageReader.h  WSIDicomInstance.cpp  WSIDicomInstance.h  (+2 more)
workstation/: CMakeLists.txt  FilterDockWidget.cpp  FilterDockWidget.h  FilterThread.h  MiniMap.cpp  MiniMap.h  PathologyViewer.cpp  PathologyViewer.h  PathologyWorkstation.aps  PathologyWorkstation.rc  PrefetchThread.cpp  PrefetchThread.h  QtProgressMonitor.h  RenderThread.cpp  RenderThread.h  RenderWorker.cpp  RenderWorker.h  ScaleBar.cpp  ScaleBar.h  TileManager.cpp  TileManager.h  UtilityFunctions.h  WSITileGraphicsItem.cpp  WSITileGraphicsItem.h  WSITileGraphicsItemCache.cpp  WSITileGraphicsItemCache.h  WorkstationToolbar.h  pathologyworkstation.cpp  pathologyworkstation.h
(+286 files in other folders)
