cmake_minimum_required(VERSION 2.8)
PROJECT(DIAGPathology)

SET(CURRENT_MAJOR_VERSION 1)
SET(CURRENT_MINOR_VERSION 5)
SET(CURRENT_PATCH_VERSION 1)

CONFIGURE_FILE (
  "${PROJECT_SOURCE_DIR}/config/pathology_config.h.in"
  "${PROJECT_BINARY_DIR}/config/pathology_config.h"
  )

SET(CMAKE_MODULE_PATH ${DIAGPathology_SOURCE_DIR}/cmakemodules)
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

IF(NOT WIN32)
SET(CMAKE_INSTALL_RPATH "\$ORIGIN/../lib:$ORIGIN/")
ENDIF(NOT WIN32)

# Use boost for cross-platform use of threading, file system and date_time handling
FIND_PACKAGE(Boost REQUIRED COMPONENTS date_time filesystem program_options regex system thread)
SET(Boost_DEFINITIONS "-DBOOST_ALL_DYN_LINK")

# Jasper for JPEG2000 codec
FIND_PACKAGE(Jasper REQUIRED)

# TIFF is the main multi-tiled format used in this package
FIND_PACKAGE(TIFF REQUIRED)

# JPEG for the codecs
FIND_PACKAGE(JPEG REQUIRED)

# ZLIB for codec support
FIND_PACKAGE(ZLIB REQUIRED)

# PugiXML required for LIF file format and reading/writing annotations
FIND_PACKAGE(PugiXML REQUIRED)

ADD_LIBRARY(libtiff STATIC IMPORTED)
SET_PROPERTY(TARGET libtiff PROPERTY IMPORTED_LOCATION ${TIFF_LIBRARY})

ADD_LIBRARY(libjasper STATIC IMPORTED)
SET_PROPERTY(TARGET libjasper PROPERTY IMPORTED_LOCATION ${JASPER_LIBRARY})

ADD_LIBRARY(libjpeg STATIC IMPORTED)
SET_PROPERTY(TARGET libjpeg PROPERTY IMPORTED_LOCATION ${JPEG_LIBRARY})

ADD_LIBRARY(zlib STATIC IMPORTED)
SET_PROPERTY(TARGET zlib PROPERTY IMPORTED_LOCATION ${ZLIB_LIBRARY})

ADD_LIBRARY(pugixml STATIC IMPORTED)
SET_PROPERTY(TARGET pugixml PROPERTY IMPORTED_LOCATION ${PugiXML_LIBRARY})

# Required for additional format support
FIND_PACKAGE(OPENSLIDE REQUIRED)

# Required for lossless JPEG compression used in for example VSIs
FIND_PACKAGE(DCMTKJPEG REQUIRED)

# Build options for the pathology projects
OPTION(BUILD_DIAG_PATHOLOGY_EXECUTABLES "Builds executables" OFF)
OPTION(BUILD_DIAG_PATHOLOGY_WORKSTATION "Builds workstation" OFF)
OPTION(BUILD_DIAG_PATHOLOGY_IMAGEPROCESSING "Builds image processing routines" OFF)
OPTION(BUILD_DIAG_PATHOLOGY_TESTS "Builds tests" OFF)
OPTION(PACKAGE_ON_INSTALL "Copies dependent DLLs and packages install" OFF)

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(io)
ADD_SUBDIRECTORY(annotation)

IF(BUILD_DIAG_PATHOLOGY_EXECUTABLES)
  ADD_SUBDIRECTORY(executables)
ENDIF()

IF(BUILD_DIAG_PATHOLOGY_MEVISLAB)
  ADD_SUBDIRECTORY(mevislab)
ENDIF()

IF(BUILD_DIAG_PATHOLOGY_IMAGEPROCESSING)
  ADD_SUBDIRECTORY(imgproc)
ENDIF()

IF(BUILD_DIAG_PATHOLOGY_WORKSTATION)
  ADD_SUBDIRECTORY(workstation)
ENDIF()

ADD_SUBDIRECTORY(buildtools)

IF(PACKAGE_ON_INSTALL)
set(CPACK_PACKAGE_NAME "ASAP")
set(CPACK_PACKAGE_VENDOR "Diagnostic Image Analysis Group")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "ASAP - Automated Slide Analysis Platform")
set(CPACK_PACKAGE_DESCRIPTION "This package provides viewing and analysis tools for whole slide images.")
set(CPACK_PACKAGE_VERSION "${CURRENT_MAJOR_VERSION}.${CURRENT_MINOR_VERSION}")
set(CPACK_PACKAGE_VERSION_MAJOR ${CURRENT_MAJOR_VERSION})
set(CPACK_PACKAGE_VERSION_MINOR ${CURRENT_MINOR_VERSION})
set(CPACK_PACKAGE_VERSION_PATCH ${CURRENT_PATCH_VERSION})
IF(WIN32)
set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
SET(CPACK_NSIS_DISPLAY_NAME "ASAP ${CPACK_PACKAGE_VERSION}")
set(CPACK_PACKAGE_EXECUTABLES asap "ASAP")
set(CPACK_NSIS_MUI_ICON ${DIAGPathology_SOURCE_DIR}/workstation/application.ico)
set(CPACK_NSIS_MUI_UNIICON ${DIAGPathology_SOURCE_DIR}/workstation/application.ico)
ELSE(WIN32)
SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Geert Litjens") 
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "ASAP - Automated Slide Analysis Platform")
set(CPACK_PACKAGING_INSTALL_PREFIX /opt/ASAP)
ENDIF(WIN32)
INCLUDE(CPack)
ENDIF(PACKAGE_ON_INSTALL)